2004-08-26  Guilhem Lavaux <guilhem@kaffe.org>

	* kaffe/kaffevm/jit/icode.c
	(softcall_abstractmethod): Build a call to soft_abstractmethod.

2004-08-25  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/geom/Arc2D.java,
	libraries/javalib/java/awt/geom/Ellipse2D.java,
	libraries/javalib/java/awt/geom/Line2D.java:
	Resynced with GNU Classpath.

	2004-08-25  Mark Wielaard  <mark@klomp.org>

        * java/awt/geom/Arc2D.java (ArcIterator): Make package private.

	2004-08-25  Sven de Marothy <sven@physto.se>

        * java/awt/geom/Arc2D.java
        Reformatted.
        setArc(): Correct documentation to say 'upper left corner'.
        (setArcByTangent,contains,intersects): Implemented.
        (containsAngle): Corrected to handle negative extents.
        ArcIterator: Set to private.
        ArcIterator: Corrected for CHORD-type arcs, negative extents.
        * java/awt/geom/Ellipse2D.java
        Documented.
        (contains,intersects): Implemented.
        * java/awt/geom/Line2D.java
        (linesIntersect): Correct handling of special cases.

2004-08-25  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/Label.java,
	libraries/javalib/java/awt/Canvas.java,
	libraries/javalib/java/awt/KeyboardFocusManager.java:
	Resynced with GNU Classpath.

	2004-08-24  Andrew John Hughes <gnu_andrew@member.fsf.org>

        * java/awt/Label.java, java/awt/Canvas.java
        Added accessibility classes to AWT Label and Canvas,
        as well as additional documentation for Canvas.

	2004-08-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        * java/awt/KeyboardFocusManager.java
        Added missing documentation.

2004-08-25  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/security/cert/X509CRLSelector.java:
	Resynced with GNU Classpath.

	2004-08-22  Casey Marshall  <csm@gnu.org>

        * java/security/cert/X509CRLSelector.java
        (match): remove unreachable try-catch clauses.