@@ -1,0 +1,6 @@
+public class InnerTest1_A {
+
+    public class X {
+    }
+
+}
