@@ -9,7 +9,11 @@
 
 CLASS_FILES = \
 	VarInit.class \
-	VarInit2.class
+	VarInit2.class \
+	InnerTest1_A.class \
+	InnerTest1_B.class \
+	InnerTest1_A$$X.class \
+	InnerTest1_B$$X.class
 
 SETUP_ENVIRONMENT = env `. $(top_builddir)/BUILD_ENVIRONMENT; sed 's/.*export \(.*\)/echo \1=$$\1/' < $(top_builddir)/BUILD_ENVIRONMENT | sh`
 
@@ -19,10 +23,16 @@ SETUP_ENVIRONMENT = env `. $(top_builddir)/BUILD_ENVIRONMENT; sed 's/.*export \(
 VarInit.class VarInit2.class: VarInit.java VarInit2.java
 	@$(SETUP_ENVIRONMENT) $(SHELL) CompileScript $(srcdir)/VarInit.java $(srcdir)/VarInit2.java
 
+InnerTest1_A.class InnerTest1_B.class: InnerTest1_A.java InnerTest1_B.java
+	@$(SETUP_ENVIRONMENT) $(SHELL) CompileScript $(srcdir)/InnerTest1_A.java $(srcdir)/InnerTest1_B.java
+	@$(SETUP_ENVIRONMENT) $(SHELL) CompileScript $(srcdir)/InnerTest1_B.java
+
 check-am: CompileScript $(CLASS_FILES)
 
 CLEANFILES=$(CLASS_FILES)
 
 EXTRA_DIST = \
 	VarInit.java \
-	VarInit2.java
+	VarInit2.java \
+	InnerTest1_A.java \
+	InnerTest1_B.java
